<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_ros2</name>
  <version>0.0.0</version>
  <description>ODrive ROS2 package for interacting with ODrives.</description>
  <maintainer email="nskinner@zygenrobotics.com">Nick Skinner</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>bfr_base</depend>
  <depend>bfr_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
